elofgren: BUGFIX: Fix ticket: "Make CalendarDatePopup? in Edited Since criteria not be half hidden behind right frame." by simply applying a negative margin to it and for IE7 make the calendar table with:75% instead of 100%. http://support.silverstripe.com/gsoc/ticket/79 (merged from branches/gsoc)
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@42088 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_left.css
+++ b/css/cms_left.css
@@ -379,3 +379,10 @@ ul.tree span.a.MailType span.c, ul.tree span.a.last.MailType span.c, ul.tree spa
 	width: 45%;
 	float: left;
 }
+#left form.actionparams #InputSiteTreeFilterDate .calendar {
+	margin-left: -100px;
+}
+/* IE7 fix: */
+#left form.actionparams #InputSiteTreeFilterDate table {
+	width: 70%;
+}
